# codec_amr

./: CMakeLists.txt
src/: codec_amr.c
